--- a/assets/pug/pages/template/chat-app.pug
+++ b/assets/pug/pages/template/chat-app.pug
@@ -168,8 +168,8 @@ html(lang='en')
             h3 Create Your Room 
             p Your Room is where You and your friends hang out.Make yours and start talking.
             img(src="../../assets/images/chatting.gif " alt="" class="xl:w-[50%] xl:ml-[28%] xl:flex xl:items-center xl:justify-center")
-            div 
-              a.btn.btn-primary.text-white(href="index.html") Join a Room
+            div.my-2 
+              a.btn.btn-primary(href="index.html" class="!text-white py-2 block") Join a Room
             div
               h4 Or Sign in with
             div.social
