--- a/assets/pug/pages/template/countdown.pug
+++ b/assets/pug/pages/template/countdown.pug
@@ -470,7 +470,7 @@ html(lang='en')
                             li.flex.flex-col.gap-1.justify-center.items-center.font-bold
                               span.days.time-value.leading-none(class="text-[1.25rem]")
                               span.timer-label Days
-                            li  
+                            li(class="contents")  
                               ul.timer.countdown-7.flex.flex-wrap.gap-2(class="items-center justify-center sm:gap-1")
                                 li
                                   span.hours.time-value
