--- a/assets/pug/pages/template/edit-profile.pug
+++ b/assets/pug/pages/template/edit-profile.pug
@@ -206,7 +206,7 @@ html(lang='en')
                             div.flex.items-center.gap-4 
                               i.fa-brands.fa-windows(class="w-5 h-5 text-primary")
                               div  
-                                p(class="text-white").text-title.text-xs  Chrome on Windows
+                                p.text-title.text-xs  Chrome on Windows
                                 span.text-content3.text-xs Dubai, 20 Jan 2023 23:07
                             div 
                               p.text-content3.text-xs Logout
@@ -214,7 +214,7 @@ html(lang='en')
                             div.flex.items-center.gap-4
                               i.fa-brands.fa-apple(class="w-5 h-5 text-title dark:text-primary")
                               div
-                                p(class="text-white").text-title.text-xs  Chrome on MacOS
+                                p.text-title.text-xs  Chrome on MacOS
                                 span.text-content3.text-xs  Australia, 16 Jan 2023 15:07
                             div
                               p.text-content3.text-xs Logout
@@ -222,7 +222,7 @@ html(lang='en')
                             div.flex.items-center.gap-4 
                               i.fa-solid.fa-mobile-screen(class="w-5 h-5 text-secondary")
                               div  
-                                p(class="text-white").text-title.text-xs  Chrome on iPhone
+                                p.text-title.text-xs  Chrome on iPhone
                                 span.text-content3.text-xs  India, 12 Jan 2023 17:07
                             div 
                               p.text-content3.text-xs Logout
@@ -230,7 +230,7 @@ html(lang='en')
                             div.flex.items-center.gap-4 
                               i.fa-solid.fa-robot(class="w-5 h-5 text-success")
                               div  
-                                p(class="text-white").text-title.text-xs Chrome on Android
+                                p.text-title.text-xs Chrome on Android
                                 span.text-content3.text-xs  Switzerland, 10 Jan 2023 13:07
                             div 
                               p.text-content3.text-xs Logout
