--- a/assets/pug/pages/template/login.pug
+++ b/assets/pug/pages/template/login.pug
@@ -40,7 +40,7 @@ html(lang='en')
                     span Remember Me
                   div(class="!mb-0")
                     a(href="forgot-password.html") Forgot Password? 
-                a(href="index.html").btn.btn-primary(class="!text-white hover:drop-shadow-lg") Sign in
+                a(href="index.html").btn.btn-primary(class="!text-white hover:drop-shadow-lg my-2") Sign in
                 div
                   h4 Or Sign in with 
                 div.social(class="sm:flex-col")
@@ -69,3 +69,5 @@ html(lang='en')
                 img(src="../../assets/images/svg/login.svg" alt="" class="w-[75%] 2xl:w-full")
                 img(src="../../assets/images/svg/login2.svg" alt="register vector" class="common-animate animate-ping bottom-[35%] absolute left-[25%] w-[33%] animate__animated animate__infinite animate__shakeY animate__slower")
       // Page Body End
+
+    include ../../layout/footer-files
