--- a/assets/pug/pages/template/reset-password.pug
+++ b/assets/pug/pages/template/reset-password.pug
@@ -37,7 +37,7 @@ html(lang='en')
                   div.password-icon
                     i(data-feather="eye" class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 feather-eye2") 
                     i(data-feather="eye-off" class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 feather-eye-off2")
-                a(href="login.html").btn.btn-primary(class="!text-white hover:drop-shadow-lg submit-btn") Reset
+                a(href="login.html").btn.btn-primary(class="!text-white hover:drop-shadow-lg submit-btn my-2") Reset
                 div
                   h4 Or Sign in with 
                 div.social(class="sm:flex-col")
@@ -62,3 +62,4 @@ html(lang='en')
                 img(src="../../assets/images/svg/reset.svg" alt="register vector" class="w-[85%]")
                 img(src="../../assets/images/svg/resetpassword2.svg" alt="register vector" class="common-animate animate-ping bottom-[35%] absolute left-[25%] w-[25%] animate__animated animate__infinite animate__shakeY animate__slower")
       // Page Body End
+    include ../../layout/footer-files
