--- a/assets/pug/pages/template/shop.pug
+++ b/assets/pug/pages/template/shop.pug
@@ -117,7 +117,7 @@ html(lang='en')
                                   span.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
                                     i(data-feather="check")
                                 a(href="javascript:void(0)")
-                                  p.text-content Puma (21) 
+                                  p.text-content Puma (21)
                             li 
                               div.flex.items-center.gap-2
                                 label.checkbox.cursor-pointer(class="w-4 h-4")
@@ -142,40 +142,75 @@ html(lang='en')
                         div.accordionItemContent(class="dark:bg-sidebar-dark2")
                           ul.flex.gap-2.flex-col
                             li 
-                              a(href="javascript:void(0)").flex.items-center.justify-between.cursor-pointer
-                                div
-                                  span.text-xs.text-content Fashion
-                                  small.text-2x.text-content 39   
+                              div.flex.items-center.gap-2
+                                label.checkbox.cursor-pointer(class="w-4 h-4")
+                                  input(type='checkbox' class="peer" checked) 
+                                  span.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
+                                    i(data-feather="check")
+                                a(href="javascript:void(0)").flex.items-center.justify-between.cursor-pointer
+                                  div
+                                    span.text-xs.text-content Fashion
+                                    small.text-2x.text-content 39   
                             li 
-                              a(href="javascript:void(0)").flex.items-center.justify-between.cursor-pointer 
-                                div
-                                  span.text-xs.text-content Trends
-                                  small.text-2x.text-content 25
+                              div.flex.items-center.gap-2
+                                label.checkbox.cursor-pointer(class="w-4 h-4")
+                                  input(type='checkbox' class="peer") 
+                                  span.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
+                                    i(data-feather="check")
+                                a(href="javascript:void(0)").flex.items-center.justify-between.cursor-pointer 
+                                  div
+                                    span.text-xs.text-content Trends 
+                                    small.text-2x.text-content 25
                             li 
-                              a(href="javascript:void(0)").flex.items-center.justify-between.cursor-pointer 
-                                div
-                                  span.text-xs.text-content  Designer
-                                  small.text-2x.text-content 15
+                              div.flex.items-center.gap-2
+                                label.checkbox.cursor-pointer(class="w-4 h-4")
+                                  input(type='checkbox' class="peer") 
+                                  span.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
+                                    i(data-feather="check")
+                                a(href="javascript:void(0)").flex.items-center.justify-between.cursor-pointer 
+                                  div
+                                    span.text-xs.text-content  Designer 
+                                    small.text-2x.text-content 15
                             li 
-                              a(href="javascript:void(0)").flex.items-center.justify-between.cursor-pointer 
-                                div
-                                  span.text-xs.text-content  Swimwear
-                                  small.text-2x.text-content 51
+                              div.flex.items-center.gap-2
+                                label.checkbox.cursor-pointer(class="w-4 h-4")
+                                  input(type='checkbox' class="peer" checked) 
+                                  span.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
+                                    i(data-feather="check")
+                                a(href="javascript:void(0)").flex.items-center.justify-between.cursor-pointer 
+                                  div
+                                    span.text-xs.text-content  Swimwear 
+                                    small.text-2x.text-content 51
                             li 
-                              a(href="javascript:void(0)").flex.items-center.justify-between.cursor-pointer 
-                                div
-                                  span.text-xs.text-content Home & kitchen  
-                                  small.text-2x.text-content 84
+                              div.flex.items-center.gap-2
+                                label.checkbox.cursor-pointer(class="w-4 h-4")
+                                  input(type='checkbox' class="peer") 
+                                  span.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
+                                    i(data-feather="check")
+                                a(href="javascript:void(0)").flex.items-center.justify-between.cursor-pointer 
+                                  div
+                                    span.text-xs.text-content Home & kitchen  
+                                    small.text-2x.text-content 84
                             li 
-                              a(href="javascript:void(0)").flex.items-center.justify-between.cursor-pointer
-                                div
-                                  span.text-xs.text-content Toys & hobbies
-                                  small.text-2x.text-content 54
+                              div.flex.items-center.gap-2
+                                label.checkbox.cursor-pointer(class="w-4 h-4")
+                                  input(type='checkbox' class="peer") 
+                                  span.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
+                                    i(data-feather="check")
+                                a(href="javascript:void(0)").flex.items-center.justify-between.cursor-pointer
+                                  div
+                                    span.text-xs.text-content Toys & hobbies 
+                                    small.text-2x.text-content 54
                             li 
-                              a(href="javascript:void(0)").flex.items-center.justify-between.cursor-pointer
-                                div
-                                  span.text-xs.text-content Tools & hardware
-                                  small.text-2x.text-content 54
+                              div.flex.items-center.gap-2
+                                label.checkbox.cursor-pointer(class="w-4 h-4")
+                                  input(type='checkbox' class="peer") 
+                                  span.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
+                                    i(data-feather="check")
+                                a(href="javascript:void(0)").flex.items-center.justify-between.cursor-pointer
+                                  div
+                                    span.text-xs.text-content Tools & hardware 
+                                    small.text-2x.text-content 54
 
                   div.flex.flex-col.flex-wrap.gap-2
                     div.accordionWrapper
@@ -200,13 +235,12 @@ html(lang='en')
                                 a(href="javascript:void(0)")
                                   p.text-content 40% or more
                             li 
-
                               div.flex.items-center.gap-2
                                 label.checkbox.cursor-pointer(class="w-4 h-4") 
                                   input(type='checkbox' class="peer") 
                                   span.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
+                                    i(data-feather="check")
                                 a(href="javascript:void(0)")
-                                  i(data-feather="check")
                                   p.text-content 30% or more
                             li 
                               div.flex.items-center.gap-2
