--- a/assets/pug/pages/template/video-app.pug
+++ b/assets/pug/pages/template/video-app.pug
@@ -22,6 +22,9 @@
 //-  chatApp
 -var chatApp=true;
 
+//- videoApp
+-var videoApp=true;
+
 //- Breadcrumbs
 -var pageTitle="Video App";
 -var breadcrumb=['Ui Kits','Video App'];
