--- a/html/template/countdown.html
+++ b/html/template/countdown.html
@@ -1433,7 +1433,7 @@
                         <div class="bg-gray-light p-4 sm:p-2 dark:bg-sidebar-dark2">
                           <ul class="timer flex flex-col flex-wrap gap-2 justify-center items-center">
                             <li class="flex flex-col gap-1 justify-center items-center font-bold"><span class="days time-value leading-none text-[1.25rem]"></span><span class="timer-label">Days</span></li>
-                            <li> 
+                            <li class="contents"> 
                               <ul class="timer countdown-7 flex flex-wrap gap-2 items-center justify-center sm:gap-1">
                                 <li><span class="hours time-value"></span><span class="timer-label">Hours</span></li>
                                 <li><span class="minutes time-value"></span><span class="timer-label">Min</span></li>
