--- a/html/template/edit-profile.html
+++ b/html/template/edit-profile.html
@@ -1204,7 +1204,7 @@
                           <div class="flex gap-3 items-center justify-between pt-3 pb-3 border-b border-border-light dark:border-b dark:border-border-dark last:border-none last:pb-0 first:pt-0"> 
                             <div class="flex items-center gap-4"> <i class="fa-brands fa-windows w-5 h-5 text-primary"></i>
                               <div> 
-                                <p class="text-white text-title text-xs"> Chrome on Windows</p><span class="text-content3 text-xs">Dubai, 20 Jan 2023 23:07</span>
+                                <p class="text-title text-xs"> Chrome on Windows</p><span class="text-content3 text-xs">Dubai, 20 Jan 2023 23:07</span>
                               </div>
                             </div>
                             <div> 
@@ -1214,7 +1214,7 @@
                           <div class="flex gap-3 items-center justify-between pt-3 pb-3 border-b border-border-light dark:border-b dark:border-border-dark last:border-none last:pb-0 first:pt-0"> 
                             <div class="flex items-center gap-4"><i class="fa-brands fa-apple w-5 h-5 text-title dark:text-primary"></i>
                               <div>
-                                <p class="text-white text-title text-xs"> Chrome on MacOS</p><span class="text-content3 text-xs"> Australia, 16 Jan 2023 15:07</span>
+                                <p class="text-title text-xs"> Chrome on MacOS</p><span class="text-content3 text-xs"> Australia, 16 Jan 2023 15:07</span>
                               </div>
                             </div>
                             <div>
@@ -1224,7 +1224,7 @@
                           <div class="flex gap-3 items-center justify-between pt-3 pb-3 border-b border-border-light dark:border-b dark:border-border-dark last:border-none last:pb-0 first:pt-0"> 
                             <div class="flex items-center gap-4"> <i class="fa-solid fa-mobile-screen w-5 h-5 text-secondary"></i>
                               <div> 
-                                <p class="text-white text-title text-xs"> Chrome on iPhone</p><span class="text-content3 text-xs"> India, 12 Jan 2023 17:07</span>
+                                <p class="text-title text-xs"> Chrome on iPhone</p><span class="text-content3 text-xs"> India, 12 Jan 2023 17:07</span>
                               </div>
                             </div>
                             <div> 
@@ -1234,7 +1234,7 @@
                           <div class="flex gap-3 items-center justify-between pt-3 pb-3 border-b border-border-light dark:border-b dark:border-border-dark last:border-none last:pb-0 first:pt-0"> 
                             <div class="flex items-center gap-4"> <i class="fa-solid fa-robot w-5 h-5 text-success"></i>
                               <div> 
-                                <p class="text-white text-title text-xs">Chrome on Android</p><span class="text-content3 text-xs"> Switzerland, 10 Jan 2023 13:07</span>
+                                <p class="text-title text-xs">Chrome on Android</p><span class="text-content3 text-xs"> Switzerland, 10 Jan 2023 13:07</span>
                               </div>
                             </div>
                             <div> 
