--- a/html/template/register.html
+++ b/html/template/register.html
@@ -46,11 +46,10 @@
                   <div class="password-icon"><i class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye"> </i><i class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye-off"> </i></div>
                 </div>
                 <div class="flex items-center gap-2">
-                  <label class="checkbox w-[1rem] h-[1rem] cursor-pointer">  
-                    <input class="peer" type="checkbox"><span class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"></i></span>
+                  <label class="checkbox cursor-pointer w-4 h-4"> 
+                    <input class="peer" type="checkbox"><span class="checkbox-indicator peer-checked:!bg-primary !border peer-checked:!border-primary"> <i data-feather="check"></i></span>
                   </label><span class="!text-title">Accept terms & condition</span>
-                </div>
-                <button class="btn btn-primary text-white hover:drop-shadow-lg md:!my-2">Sign Up</button>
+                </div><a class="btn btn-primary !text-white hover:drop-shadow-lg my-2">Sign Up</a>
                 <div class="text-center"><span>Already have an account?   <a href="login.html">Sign in</a></span></div>
                 <div>
                   <h4>Or Sign in with </h4>
@@ -75,5 +74,16 @@
       </div>
       <!-- Page Body End-->
     </main>
+    <!-- Feather Icon Js -->
+    <script src="../../assets/js/feather.min.js"></script>
+    <script src="../../assets/js/feather-custom.js"></script>
+    <!-- Select Js -->
+    <script src="../../assets/js/custom-select.js"></script>
+    <!-- fontAwesome js-->
+    <script src="../../assets/js/fontawesome/all.min.js"></script>
+    <!-- password hide js -->
+    <script src="../../assets/js/password-hide-show-login.js"></script>
+    <!-- Custom script   -->
+    <script src="../../assets/js/script.js"> </script>
   </body>
 </html>
