--- a/html/template/reset-password.html
+++ b/html/template/reset-password.html
@@ -42,7 +42,7 @@
                 <div class="relative">
                   <input type="password" id="password2" name="Confirmpassword" required="" placeholder="Confirm password"/>
                   <div class="password-icon"><i class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 feather-eye2" data-feather="eye"> </i><i class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 feather-eye-off2" data-feather="eye-off"></i></div>
-                </div><a class="btn btn-primary !text-white hover:drop-shadow-lg submit-btn" href="login.html">Reset</a>
+                </div><a class="btn btn-primary !text-white hover:drop-shadow-lg submit-btn my-2" href="login.html">Reset</a>
                 <div>
                   <h4>Or Sign in with </h4>
                 </div>
@@ -66,5 +66,18 @@
       </div>
       <!-- Page Body End-->
     </main>
+    <!-- Feather Icon Js -->
+    <script src="../../assets/js/feather.min.js"></script>
+    <script src="../../assets/js/feather-custom.js"></script>
+    <!-- Select Js -->
+    <script src="../../assets/js/custom-select.js"></script>
+    <!-- fontAwesome js-->
+    <script src="../../assets/js/fontawesome/all.min.js"></script>
+    <!-- password hide-show js-->
+    <script src="../../assets/js/password-hide-show.js"></script>
+    <!-- confirm password js -->
+    <script src="../../assets/js/confirm-password.js"></script>
+    <!-- Custom script   -->
+    <script src="../../assets/js/script.js"> </script>
   </body>
 </html>
