--- a/html/template/shop.html
+++ b/html/template/shop.html
@@ -1097,7 +1097,7 @@
                                 <label class="checkbox cursor-pointer w-4 h-4">
                                   <input class="peer" type="checkbox"><span class="checkbox-indicator peer-checked:!bg-primary !border peer-checked:!border-primary"> <i data-feather="check"></i></span>
                                 </label><a href="javascript:void(0)">
-                                  <p class="text-content">Puma (21) </p></a>
+                                  <p class="text-content">Puma (21)</p></a>
                               </div>
                             </li>
                             <li> 
@@ -1127,20 +1127,62 @@
                         <h4 class="accordionItemHeading bg-primary">Categories</h4>
                         <div class="accordionItemContent dark:bg-sidebar-dark2">
                           <ul class="flex gap-2 flex-col">
-                            <li> <a class="flex items-center justify-between cursor-pointer" href="javascript:void(0)">
-                                <div><span class="text-xs text-content">Fashion</span><small class="text-2x text-content">39   </small></div></a></li>
-                            <li> <a class="flex items-center justify-between cursor-pointer" href="javascript:void(0)"> 
-                                <div><span class="text-xs text-content">Trends</span><small class="text-2x text-content">25</small></div></a></li>
-                            <li> <a class="flex items-center justify-between cursor-pointer" href="javascript:void(0)"> 
-                                <div><span class="text-xs text-content"> Designer</span><small class="text-2x text-content">15</small></div></a></li>
-                            <li> <a class="flex items-center justify-between cursor-pointer" href="javascript:void(0)"> 
-                                <div><span class="text-xs text-content"> Swimwear</span><small class="text-2x text-content">51</small></div></a></li>
-                            <li> <a class="flex items-center justify-between cursor-pointer" href="javascript:void(0)"> 
-                                <div><span class="text-xs text-content">Home & kitchen  </span><small class="text-2x text-content">84</small></div></a></li>
-                            <li> <a class="flex items-center justify-between cursor-pointer" href="javascript:void(0)">
-                                <div><span class="text-xs text-content">Toys & hobbies</span><small class="text-2x text-content">54</small></div></a></li>
-                            <li> <a class="flex items-center justify-between cursor-pointer" href="javascript:void(0)">
-                                <div><span class="text-xs text-content">Tools & hardware</span><small class="text-2x text-content">54</small></div></a></li>
+                            <li> 
+                              <div class="flex items-center gap-2">
+                                <label class="checkbox cursor-pointer w-4 h-4">
+                                  <input class="peer" type="checkbox" checked><span class="checkbox-indicator peer-checked:!bg-primary !border peer-checked:!border-primary"> <i data-feather="check"></i></span>
+                                </label><a class="flex items-center justify-between cursor-pointer" href="javascript:void(0)">
+                                  <div><span class="text-xs text-content">Fashion</span><small class="text-2x text-content">39   </small></div></a>
+                              </div>
+                            </li>
+                            <li> 
+                              <div class="flex items-center gap-2">
+                                <label class="checkbox cursor-pointer w-4 h-4">
+                                  <input class="peer" type="checkbox"><span class="checkbox-indicator peer-checked:!bg-primary !border peer-checked:!border-primary"> <i data-feather="check"></i></span>
+                                </label><a class="flex items-center justify-between cursor-pointer" href="javascript:void(0)"> 
+                                  <div><span class="text-xs text-content">Trends </span><small class="text-2x text-content">25</small></div></a>
+                              </div>
+                            </li>
+                            <li> 
+                              <div class="flex items-center gap-2">
+                                <label class="checkbox cursor-pointer w-4 h-4">
+                                  <input class="peer" type="checkbox"><span class="checkbox-indicator peer-checked:!bg-primary !border peer-checked:!border-primary"> <i data-feather="check"></i></span>
+                                </label><a class="flex items-center justify-between cursor-pointer" href="javascript:void(0)"> 
+                                  <div><span class="text-xs text-content"> Designer </span><small class="text-2x text-content">15</small></div></a>
+                              </div>
+                            </li>
+                            <li> 
+                              <div class="flex items-center gap-2">
+                                <label class="checkbox cursor-pointer w-4 h-4">
+                                  <input class="peer" type="checkbox" checked><span class="checkbox-indicator peer-checked:!bg-primary !border peer-checked:!border-primary"> <i data-feather="check"></i></span>
+                                </label><a class="flex items-center justify-between cursor-pointer" href="javascript:void(0)"> 
+                                  <div><span class="text-xs text-content"> Swimwear </span><small class="text-2x text-content">51</small></div></a>
+                              </div>
+                            </li>
+                            <li> 
+                              <div class="flex items-center gap-2">
+                                <label class="checkbox cursor-pointer w-4 h-4">
+                                  <input class="peer" type="checkbox"><span class="checkbox-indicator peer-checked:!bg-primary !border peer-checked:!border-primary"> <i data-feather="check"></i></span>
+                                </label><a class="flex items-center justify-between cursor-pointer" href="javascript:void(0)"> 
+                                  <div><span class="text-xs text-content">Home & kitchen  </span><small class="text-2x text-content">84</small></div></a>
+                              </div>
+                            </li>
+                            <li> 
+                              <div class="flex items-center gap-2">
+                                <label class="checkbox cursor-pointer w-4 h-4">
+                                  <input class="peer" type="checkbox"><span class="checkbox-indicator peer-checked:!bg-primary !border peer-checked:!border-primary"> <i data-feather="check"></i></span>
+                                </label><a class="flex items-center justify-between cursor-pointer" href="javascript:void(0)">
+                                  <div><span class="text-xs text-content">Toys & hobbies </span><small class="text-2x text-content">54</small></div></a>
+                              </div>
+                            </li>
+                            <li> 
+                              <div class="flex items-center gap-2">
+                                <label class="checkbox cursor-pointer w-4 h-4">
+                                  <input class="peer" type="checkbox"><span class="checkbox-indicator peer-checked:!bg-primary !border peer-checked:!border-primary"> <i data-feather="check"></i></span>
+                                </label><a class="flex items-center justify-between cursor-pointer" href="javascript:void(0)">
+                                  <div><span class="text-xs text-content">Tools & hardware </span><small class="text-2x text-content">54</small></div></a>
+                              </div>
+                            </li>
                           </ul>
                         </div>
                       </div>
@@ -1171,8 +1213,8 @@
                             <li> 
                               <div class="flex items-center gap-2">
                                 <label class="checkbox cursor-pointer w-4 h-4"> 
-                                  <input class="peer" type="checkbox"><span class="checkbox-indicator peer-checked:!bg-primary !border peer-checked:!border-primary"> </span>
-                                </label><a href="javascript:void(0)"><i data-feather="check"></i>
+                                  <input class="peer" type="checkbox"><span class="checkbox-indicator peer-checked:!bg-primary !border peer-checked:!border-primary"> <i data-feather="check"></i></span>
+                                </label><a href="javascript:void(0)">
                                   <p class="text-content">30% or more</p></a>
                               </div>
                             </li>
