--- a/html/template/video-app.html
+++ b/html/template/video-app.html
@@ -1368,7 +1368,7 @@
                                 <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/2.jpg" alt="Dmitriy Groshev"/></div>
                               </div>
                               <div class="w-[calc(100%_-_70px)]"> 
-                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Dmitriy Groshev</h4><span class="text-content truncate block mt-1">
+                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Dmitriy Groshev</h4><span class="text-content truncate block mt-1 flex gap-1">
                                   <svg class="w-4 h-4 stroke-primary"> 
                                     <use href="../../assets/svg/sprite.svg#Calling"> </use>
                                   </svg><span class="text-content text-xs">incoming...</span></span>
@@ -1382,7 +1382,7 @@
                                 <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/3.jpg" alt="Josephin Water"/></div>
                               </div>
                               <div class="w-[calc(100%_-_70px)]"> 
-                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Josephin Water</h4><span class="text-content truncate block mt-1">
+                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Josephin Water</h4><span class="text-content truncate block mt-1 flex gap-1">
                                   <svg class="w-4 h-4 stroke-primary"> 
                                     <use href="../../assets/svg/sprite.svg#Calling"> </use>
                                   </svg><span class="text-content text-xs">outgoing...</span></span>
@@ -1396,7 +1396,7 @@
                                 <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/4.jpg" alt="Sufiya Elija"/></div>
                               </div>
                               <div class="w-[calc(100%_-_70px)]"> 
-                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Sufiya Elija</h4><span class="text-content truncate block mt-1">
+                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Sufiya Elija</h4><span class="text-content truncate block mt-1 flex gap-1">
                                   <svg class="w-4 h-4 stroke-secondary"> 
                                     <use href="../../assets/svg/sprite.svg#Video"> </use>
                                   </svg><span class="text-content text-xs">missed...</span></span>
@@ -1410,7 +1410,7 @@
                                 <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/5.jpg" alt="Mukrani Pabelo"/></div>
                               </div>
                               <div class="w-[calc(100%_-_70px)]"> 
-                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Mukrani Pabelo</h4><span class="text-content truncate block mt-1">
+                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Mukrani Pabelo</h4><span class="text-content truncate block mt-1 flex gap-1">
                                   <svg class="w-4 h-4 stroke-secondary"> 
                                     <use href="../../assets/svg/sprite.svg#Video"> </use>
                                   </svg><span class="text-content text-xs">incoming...</span></span>
@@ -1424,7 +1424,7 @@
                                 <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/6.jpg" alt="Janis Evans"/></div>
                               </div>
                               <div class="w-[calc(100%_-_70px)]"> 
-                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Janis Evans</h4><span class="text-content truncate block mt-1">
+                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Janis Evans</h4><span class="text-content truncate block mt-1 flex gap-1">
                                   <svg class="w-4 h-4 stroke-secondary"> 
                                     <use href="../../assets/svg/sprite.svg#Video"> </use>
                                   </svg><span class="text-content text-xs">missed...</span></span>
@@ -1438,7 +1438,7 @@
                                 <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/7.jpg" alt="John Holland"/></div>
                               </div>
                               <div class="w-[calc(100%_-_70px)]"> 
-                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">John Holland</h4><span class="text-content truncate block mt-1">
+                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">John Holland</h4><span class="text-content truncate block mt-1 flex gap-1">
                                   <svg class="w-4 h-4 stroke-primary"> 
                                     <use href="../../assets/svg/sprite.svg#Calling"> </use>
                                   </svg><span class="text-content text-xs">missed...</span></span>
@@ -1452,7 +1452,7 @@
                                 <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/8.jpg" alt="Anthony Eaton"/></div>
                               </div>
                               <div class="w-[calc(100%_-_70px)]"> 
-                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Anthony Eaton</h4><span class="text-content truncate block mt-1">
+                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Anthony Eaton</h4><span class="text-content truncate block mt-1 flex gap-1">
                                   <svg class="w-4 h-4 stroke-primary"> 
                                     <use href="../../assets/svg/sprite.svg#Calling"> </use>
                                   </svg><span class="text-content text-xs">outgoing...</span></span>
@@ -1466,7 +1466,7 @@
                                 <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/9.jpg" alt="Michael Wilkerson"/></div>
                               </div>
                               <div class="w-[calc(100%_-_70px)]"> 
-                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Michael Wilkerson</h4><span class="text-content truncate block mt-1">
+                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Michael Wilkerson</h4><span class="text-content truncate block mt-1 flex gap-1">
                                   <svg class="w-4 h-4 stroke-primary"> 
                                     <use href="../../assets/svg/sprite.svg#Calling"> </use>
                                   </svg><span class="text-content text-xs">incoming...</span></span>
@@ -1480,7 +1480,7 @@
                                 <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/10.jpg" alt="Sarah Blake"/></div>
                               </div>
                               <div class="w-[calc(100%_-_70px)]"> 
-                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Sarah Blake</h4><span class="text-content truncate block mt-1">
+                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Sarah Blake</h4><span class="text-content truncate block mt-1 flex gap-1">
                                   <svg class="w-4 h-4 stroke-secondary"> 
                                     <use href="../../assets/svg/sprite.svg#Video"> </use>
                                   </svg><span class="text-content text-xs">incoming...</span></span>
@@ -1494,7 +1494,7 @@
                                 <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/11.jpg" alt="Sohel Soheb"/></div>
                               </div>
                               <div class="w-[calc(100%_-_70px)]"> 
-                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Sohel Soheb</h4><span class="text-content truncate block mt-1">
+                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Sohel Soheb</h4><span class="text-content truncate block mt-1 flex gap-1">
                                   <svg class="w-4 h-4 stroke-primary"> 
                                     <use href="../../assets/svg/sprite.svg#Calling"> </use>
                                   </svg><span class="text-content text-xs">missed...</span></span>
@@ -2049,6 +2049,8 @@
     <script src="../../assets/js/photoswipe/photoswipe-custom.js"> </script>
     <!-- chatApp js-->
     <script src="../../assets/js/chat-app/chat-app-page.js"></script>
+    <!-- videoApp js-->
+    <script src="../../assets/js/chat-app/video-app-page.js"></script>
     <!-- customizer js-->
     <script src="../../assets/js/customizer.js"> </script>
     <!-- Custom script   -->
