--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9260,6 +9260,10 @@ header {
   right: -1.25rem;
 }
 
+.right-\[-120px\] {
+  right: -120px;
+}
+
 .right-\[-12px\] {
   right: -12px;
 }
@@ -9278,10 +9282,6 @@ header {
 
 .right-\[-50px\] {
   right: -50px;
-}
-
-.right-\[-80px\] {
-  right: -80px;
 }
 
 .right-\[1\.5625rem\] {
@@ -9392,6 +9392,14 @@ header {
   top: 11.5%;
 }
 
+.top-\[13\%\] {
+  top: 13%;
+}
+
+.top-\[14\%\] {
+  top: 14%;
+}
+
 .top-\[14px\] {
   top: 14px;
 }
@@ -9400,16 +9408,8 @@ header {
   top: 15%;
 }
 
-.top-\[16\%\] {
-  top: 16%;
-}
-
-.top-\[17\%\] {
-  top: 17%;
-}
-
-.top-\[180px\] {
-  top: 180px;
+.top-\[155px\] {
+  top: 155px;
 }
 
 .top-\[20\%\] {
@@ -9420,16 +9420,16 @@ header {
   top: 3%;
 }
 
+.top-\[30px\] {
+  top: 30px;
+}
+
 .top-\[4\%\] {
   top: 4%;
 }
 
 .top-\[4\.5\%\] {
   top: 4.5%;
-}
-
-.top-\[40px\] {
-  top: 40px;
 }
 
 .top-\[50\%\] {
@@ -10213,10 +10213,6 @@ header {
   height: 45px;
 }
 
-.h-\[470px\] {
-  height: 470px;
-}
-
 .h-\[4px\] {
   height: 4px;
 }
@@ -10249,10 +10245,6 @@ header {
   height: 60px;
 }
 
-.h-\[660px\] {
-  height: 660px;
-}
-
 .h-\[6px\] {
   height: 6px;
 }
@@ -10267,10 +10259,6 @@ header {
 
 .h-\[856px\] {
   height: 856px;
-}
-
-.h-\[89\%\] {
-  height: 89%;
 }
 
 .h-\[8px\] {
@@ -10320,6 +10308,10 @@ header {
 .h-max {
   height: -moz-max-content;
   height: max-content;
+}
+
+.h-\[90vh\] {
+  height: 90vh;
 }
 
 .max-h-\[120px\] {
@@ -16021,27 +16013,13 @@ div[class*=activity-dot-secondary]{
   background-position: center;
   background-repeat: no-repeat;
   display: block;
-  height: 100vh;
-}
-
-@media (max-width: 1599px) {
-
-  .bg-landing-size {
-    height: 90vh;
-  }
-}
-
-@media (max-width: 1399px) {
-
-  .bg-landing-size {
-    height: 80vh;
-  }
+  min-height: calc(500px + (820 - 500) * ((100vw - 992px) / (1920 - 992)));
 }
 
 @media (max-width: 991px) {
 
   .bg-landing-size {
-    height: auto;
+    min-height: 0px;
   }
 }
 
@@ -18764,6 +18742,10 @@ div[class*=activity-dot-secondary]{
     height: 5px;
   }
 
+  .\35xl\:h-\[84vh\] {
+    height: 84vh;
+  }
+
   .\35xl\:w-11 {
     width: 2.75rem;
   }
@@ -18830,8 +18812,8 @@ div[class*=activity-dot-secondary]{
     right: 37%;
   }
 
-  .\34xl\:right-\[46\%\] {
-    right: 46%;
+  .\34xl\:right-\[45\%\] {
+    right: 45%;
   }
 
   .\34xl\:top-\[-10\%\] {
@@ -18844,6 +18826,14 @@ div[class*=activity-dot-secondary]{
 
   .\34xl\:top-\[14px\] {
     top: 14px;
+  }
+
+  .\34xl\:top-\[16\%\] {
+    top: 16%;
+  }
+
+  .\34xl\:top-\[17\%\] {
+    top: 17%;
   }
 
   .\34xl\:top-\[25\%\] {
@@ -18918,16 +18908,12 @@ div[class*=activity-dot-secondary]{
     height: 390px;
   }
 
-  .\34xl\:h-\[410px\] {
-    height: 410px;
+  .\34xl\:h-\[80vh\] {
+    height: 80vh;
   }
 
-  .\34xl\:h-\[590px\] {
-    height: 590px;
-  }
-
-  .\34xl\:h-\[79\%\] {
-    height: 79%;
+  .\34xl\:h-\[77vh\] {
+    height: 77vh;
   }
 
   .\34xl\:w-5 {
@@ -19200,8 +19186,28 @@ div[class*=activity-dot-secondary]{
 
 @media (max-width: 1399px) {
 
+  .\32xl\:right-\[35\%\] {
+    right: 35%;
+  }
+
+  .\32xl\:right-\[43\%\] {
+    right: 43%;
+  }
+
   .\32xl\:top-\[-6\%\] {
     top: -6%;
+  }
+
+  .\32xl\:top-\[110px\] {
+    top: 110px;
+  }
+
+  .\32xl\:top-\[6\%\] {
+    top: 6%;
+  }
+
+  .\32xl\:top-\[7\%\] {
+    top: 7%;
   }
 
   .\32xl\:col-span-12 {
@@ -19279,20 +19285,16 @@ div[class*=activity-dot-secondary]{
     height: 20px;
   }
 
-  .\32xl\:h-\[360px\] {
-    height: 360px;
-  }
-
   .\32xl\:h-\[40px\] {
     height: 40px;
   }
 
-  .\32xl\:h-\[500px\] {
-    height: 500px;
+  .\32xl\:h-\[68vh\] {
+    height: 68vh;
   }
 
-  .\32xl\:h-\[69\%\] {
-    height: 69%;
+  .\32xl\:h-\[58vh\] {
+    height: 58vh;
   }
 
   .\32xl\:w-\[20px\] {
@@ -19431,6 +19433,10 @@ div[class*=activity-dot-secondary]{
     right: -30px;
   }
 
+  .xl\:right-\[40\%\] {
+    right: 40%;
+  }
+
   .xl\:right-\[48\%\] {
     right: 48%;
   }
@@ -19555,8 +19561,16 @@ div[class*=activity-dot-secondary]{
     height: 4.0625rem;
   }
 
+  .xl\:h-\[58vh\] {
+    height: 58vh;
+  }
+
   .xl\:h-full {
     height: 100%;
+  }
+
+  .xl\:h-\[53vh\] {
+    height: 53vh;
   }
 
   .xl\:w-5 {
@@ -20112,11 +20126,6 @@ div[class*=activity-dot-secondary]{
     letter-spacing: 0.03125rem;
   }
 
-  .lg\:text-3xl-responsive {
-    font-size:  calc(1.125rem + (1.625 - 1.125) * ((100vw - 20rem) / (120 - 20)));
-    line-height:  calc(1.375rem + (2.1875 - 1.375) * ((100vw - 20rem) / (120 - 20)));
-  }
-
   .lg\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
@@ -20413,18 +20422,9 @@ div[class*=activity-dot-secondary]{
     grid-column: span 8 / span 8;
   }
 
-  .md\:\!my-2 {
-    margin-top: 0.5rem !important;
-    margin-bottom: 0.5rem !important;
-  }
-
   .md\:-mx-\[45px\] {
     margin-left: -45px;
     margin-right: -45px;
-  }
-
-  .md\:\!mb-0 {
-    margin-bottom: 0px !important;
   }
 
   .md\:\!mt-1 {
@@ -20934,10 +20934,6 @@ div[class*=activity-dot-secondary]{
     margin-left: 0px !important;
   }
 
-  .sm\:\!mt-2 {
-    margin-top: 0.5rem !important;
-  }
-
   .sm\:-mt-1 {
     margin-top: -0.25rem;
   }
@@ -21267,6 +21263,11 @@ div[class*=activity-dot-secondary]{
   .sm\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+
+  .sm\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
   }
 
   .sm\:pb-0 {
