--- a/assets/pug/layout/footer-files.pug
+++ b/assets/pug/layout/footer-files.pug
@@ -1,181 +1,185 @@
 
 
 if (feather)
-    // Feather Icon Js 
-    script(src='../../assets/js/feather.min.js')
-    script(src='../../assets/js/feather-custom.js')
+  // Feather Icon Js 
+  script(src='../../assets/js/feather.min.js')
+  script(src='../../assets/js/feather-custom.js')
 
 if (customSelect)
-    // Select Js 
-    script(src='../../assets/js/custom-select.js')
+  // Select Js 
+  script(src='../../assets/js/custom-select.js')
 
 if(dataMap)
-    // Data Map js
-    script(src="../../assets/js/map/data-map/d3.min.js")     
-    script(src="../../assets/js/map/data-map/topojson.min.js")     
-    script(src="../../assets/js/map/data-map/datamaps.world.min.js")        
-    script(src="../../assets/js/map/data-map/custom.js") 
+  // Data Map js
+  script(src="../../assets/js/map/data-map/d3.min.js")     
+  script(src="../../assets/js/map/data-map/topojson.min.js")     
+  script(src="../../assets/js/map/data-map/datamaps.world.min.js")        
+  script(src="../../assets/js/map/data-map/custom.js") 
 
 if(mapsJs)
-    // mapsJs js
-    script(src="../../assets/js/map/maps-js/leaflet.js")     
-    script(src="../../assets/js/map/maps-js/custom-map-1.js")     
-    script(src="../../assets/js/map/maps-js/custom-map-2.js")  
+  // mapsJs js
+  script(src="../../assets/js/map/maps-js/leaflet.js")     
+  script(src="../../assets/js/map/maps-js/custom-map-1.js")     
+  script(src="../../assets/js/map/maps-js/custom-map-2.js")  
 
 if (fullCalender)
-    // Full Calender Js 
+  // Full Calender Js 
 
-    script(src='../../assets/js/fullcalender.js')
-    script(src='../../assets/js/fullcalender-custom.js')
+  script(src='../../assets/js/fullcalender.js')
+  script(src='../../assets/js/fullcalender-custom.js')
 
 if (chartJs) 
-    // Chart Js
-    script(src='../../assets/js/chartjs/chart.min.js')
-    script(src='../../assets/js/chartjs/chartist.js')
-    script(src='../../assets/js/chartjs/chartist-plugin-tooltip.js')
+  // Chart Js
+  script(src='../../assets/js/chartjs/chart.min.js')
+  script(src='../../assets/js/chartjs/chartist.js')
+  script(src='../../assets/js/chartjs/chartist-plugin-tooltip.js')
 
 if (apexChart)
-    // Apex Chart Js 
-    script(src='../../assets/js/apexchart/apexcharts.js')
-    script(src='../../assets/js/apexchart/apex-common.js')
-    if (uniqueApex)
-        script(src='../../assets/js/apexchart/unique-custom.js')
-    if (ecommerceApex)
-        script(src='../../assets/js/apexchart/ecommerce-custom.js')
-    if(customApexChart)
-        script(src='../../assets/js/apexchart/custom-apex-charts.js')
-    if(widgetApex)
-        script(src='../../assets/js/apexchart/widget-page.js')
+  // Apex Chart Js 
+  script(src='../../assets/js/apexchart/apexcharts.js')
+  script(src='../../assets/js/apexchart/apex-common.js')
+  if (uniqueApex)
+    script(src='../../assets/js/apexchart/unique-custom.js')
+  if (ecommerceApex)
+    script(src='../../assets/js/apexchart/ecommerce-custom.js')
+  if(customApexChart)
+    script(src='../../assets/js/apexchart/custom-apex-charts.js')
+  if(widgetApex)
+    script(src='../../assets/js/apexchart/widget-page.js')
 
 if (prism)
-    // prism js
-    script(src='../../assets/js/prism.js')
+  // prism js
+  script(src='../../assets/js/prism.js')
 
 if (sidebar)
-    // Sidebar Js 
-    script(src='../../assets/js/sidebar.js')
+  // Sidebar Js 
+  script(src='../../assets/js/sidebar.js')
 
 if (iconCopy)
-    // Icon Copy Js 
-    script(src='../../assets/js/icon-copy.js')
+  // Icon Copy Js 
+  script(src='../../assets/js/icon-copy.js')
 
 if (swiper)
-    // swiper slider js
-    script(src="../../assets/js/swiper-slider/swiper-bundle.min.js")
-    script(src="../../assets/js/swiper-slider/swiper-slider-page.js")
-    script(src="../../assets/js/swiper-slider/ecommerce.js")
+  // swiper slider js
+  script(src="../../assets/js/swiper-slider/swiper-bundle.min.js")
+  script(src="../../assets/js/swiper-slider/swiper-slider-page.js")
+  script(src="../../assets/js/swiper-slider/ecommerce.js")
 
 if (wow)
-    // wow animation js
-    script(src="../../assets/js/wow.js")
-    script(src="../../assets/js/wow-custom.js")
+  // wow animation js
+  script(src="../../assets/js/wow.js")
+  script(src="../../assets/js/wow-custom.js")
 
 if (toast)
-    //toast js
-    script(src="../../assets/js/toast.js")
+  //toast js
+  script(src="../../assets/js/toast.js")
 
 if (emojiPicker)
-    // emojiPicker js
-    script( src="../../assets/js/emoji-picker/uikit.min.js") 
-    script( src="../../assets/js/emoji-picker/uikit-icons.min.js") 
-    script( src="../../assets/js/emoji-picker/vanillaEmojiPicker.js") 
-    script( src="../../assets/js/emoji-picker/emojiPicker-custom.js") 
+  // emojiPicker js
+  script( src="../../assets/js/emoji-picker/uikit.min.js") 
+  script( src="../../assets/js/emoji-picker/uikit-icons.min.js") 
+  script( src="../../assets/js/emoji-picker/vanillaEmojiPicker.js") 
+  script( src="../../assets/js/emoji-picker/emojiPicker-custom.js") 
 
 if (photoswipe)
-    // photoswipe js
-    script( src="../../assets/js/photoswipe/photoswipe-lightbox.esm.js") 
-    script( src="../../assets/js/photoswipe/photoswipe-custom.js") 
+  // photoswipe js
+  script( src="../../assets/js/photoswipe/photoswipe-lightbox.esm.js") 
+  script( src="../../assets/js/photoswipe/photoswipe-custom.js") 
 
 if(chatApp)
-    // chatApp js
-    script(src="../../assets/js/chat-app/chat-app-page.js")
+  // chatApp js
+  script(src="../../assets/js/chat-app/chat-app-page.js")
+
+if(videoApp)
+  // videoApp js
+  script(src="../../assets/js/chat-app/video-app-page.js")
 
 if(emailApp)
-    // emailApp js
-    script(src="../../assets/js/email-app/email-app-page.js")
+  // emailApp js
+  script(src="../../assets/js/email-app/email-app-page.js")
 
 if(ecommerce)
-    // ecommerce js
-    script(src="../../assets/js/ecommerce-app/ecommerce-app-page.js")
+  // ecommerce js
+  script(src="../../assets/js/ecommerce-app/ecommerce-app-page.js")
 
 if(otp)
-    // otp js
-    script(src="../../assets/js/otp.js")
+  // otp js
+  script(src="../../assets/js/otp.js")
 
 if(fontAwesome)
-    // fontAwesome js
-    script(src="../../assets/js/fontawesome/all.min.js")
+  // fontAwesome js
+  script(src="../../assets/js/fontawesome/all.min.js")
 
 if(macy)
-    // macy js
-    script(src="../../assets/js/macy.min.js")
-    script(src="../../assets/js/macy.js")
+  // macy js
+  script(src="../../assets/js/macy.min.js")
+  script(src="../../assets/js/macy.js")
 
 if(textEditor)
-    // textEditor js
-    script(src="../../assets/js/text-editor.js")
+  // textEditor js
+  script(src="../../assets/js/text-editor.js")
 
 if(filepond)
-    // filepond js
-    script(src="../../assets/js/filepond/filepond-plugin-image-preview.js") 
-    script(src="../../assets/js/filepond/filepond-plugin-file-rename.js") 
-    script(src="../../assets/js/filepond/filepond-plugin-image-transform.js") 
-    script(src="../../assets/js/filepond/filepond.js")
-    script(src="../../assets/js/filepond/filepond-custom.js") 
+  // filepond js
+  script(src="../../assets/js/filepond/filepond-plugin-image-preview.js") 
+  script(src="../../assets/js/filepond/filepond-plugin-file-rename.js") 
+  script(src="../../assets/js/filepond/filepond-plugin-image-transform.js") 
+  script(src="../../assets/js/filepond/filepond.js")
+  script(src="../../assets/js/filepond/filepond-custom.js") 
 
 if(jkanban)
-    // jkanban js    
-    script( src="../../assets/js/jkanban.min.js") 
-    script( src="../../assets/js/jkanban-custom.js")
+  // jkanban js    
+  script( src="../../assets/js/jkanban.min.js") 
+  script( src="../../assets/js/jkanban-custom.js")
 
 if(userCustom)
-    // userCustom js
-    script(src="../../assets/js/user-profile-custom.js") 
+  // userCustom js
+  script(src="../../assets/js/user-profile-custom.js") 
 
 if(calendar_page)
-    // Calendar js
-    script(src='../../assets/js/calender/initialize.js')
-    script(src='../../assets/js/calender/main.min.js')
+  // Calendar js
+  script(src='../../assets/js/calender/initialize.js')
+  script(src='../../assets/js/calender/main.min.js')
 
 if(todoApp)
-    // todoApp js 
-    script(src='../../assets/js/todo-app.js') 
+  // todoApp js 
+  script(src='../../assets/js/todo-app.js') 
 
 if(todoTaskApp)
-    // todoTaskApp js
-    script(src="../../assets/js/todo/todo.init.js") 
+  // todoTaskApp js
+  script(src="../../assets/js/todo/todo.init.js") 
 
 if(formValidation)
-    // formValidation js
-    script(src="../../assets/js/validation.init.js") 
+  // formValidation js
+  script(src="../../assets/js/validation.init.js") 
 
 if(customizer)
-    // customizer js
-    script(src="../../assets/js/customizer.js") 
+  // customizer js
+  script(src="../../assets/js/customizer.js") 
 
 if(darkLayout)
-    // darkLayout js
-    script(src="../../assets/js/dark-layout.js") 
+  // darkLayout js
+  script(src="../../assets/js/dark-layout.js") 
 
 if(gridListView)
-    // gridListView js
-    script(src="../../assets/js/grid-list-view.js") 
+  // gridListView js
+  script(src="../../assets/js/grid-list-view.js") 
 
 if(landing)
-    // landing js
-    script(src="../../assets/js/landing.js")
+  // landing js
+  script(src="../../assets/js/landing.js")
 
 if(passwordHideShow)
-    // password hide-show js
-    script(src="../../assets/js/password-hide-show.js")
+  // password hide-show js
+  script(src="../../assets/js/password-hide-show.js")
 
 if(passwordHideShowLogin)
-    // password hide js 
-    script(src="../../assets/js/password-hide-show-login.js")
+  // password hide js 
+  script(src="../../assets/js/password-hide-show-login.js")
 
 if(confirmPassword)
-    // confirm password js 
-    script(src="../../assets/js/confirm-password.js")
+  // confirm password js 
+  script(src="../../assets/js/confirm-password.js")
 
 // Custom script   
 script(src='../../assets/js/script.js') 
