--- a/assets/pug/pages/template/forgot-password.pug
+++ b/assets/pug/pages/template/forgot-password.pug
@@ -26,3 +26,4 @@ html(lang='en')
                                 img(src="../../assets/images/svg/Floor.svg" alt="" class="w-[50%]")
                                 img(src="../../assets/images/svg/surface.svg" alt="" class="common-animate top-0 absolute left-[60%]  animate__animated animate__infinite animate__shakeY animate__slower")
             // Page Body End
+        include ../../layout/footer-files
