--- a/assets/pug/pages/template/register.pug
+++ b/assets/pug/pages/template/register.pug
@@ -2,11 +2,11 @@
 //- feather
 -var feather= true;
 
-//- custom select
--var customSelect= true;
-
 //- fontawesome
 -var fontAwesome=true;
+
+//- custom select
+-var customSelect= true;
 
 //- passwordHideShowLogin
 -var passwordHideShowLogin=true;
@@ -35,12 +35,12 @@ html(lang='en')
                     i(data-feather="eye" class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ").showHidePassword 
                     i(data-feather="eye-off" class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ").showHidePassword 
                 div.flex.items-center.gap-2
-                  label.checkbox(class="w-[1rem] h-[1rem] cursor-pointer")   
-                    input(type='checkbox' class="peer") 
-                    span.checkbox-indicator(class="peer-checked:!bg-primary !border-primary")  
+                  label.checkbox.cursor-pointer(class="w-4 h-4") 
+                    input(type='checkbox' class="peer")
+                    span.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
                       i(data-feather="check")
                   span(class="!text-title") Accept terms & condition
-                button.btn.btn-primary.text-white(class="hover:drop-shadow-lg md:!my-2") Sign Up
+                a.btn.btn-primary(class="!text-white hover:drop-shadow-lg my-2") Sign Up
                 div.text-center
                   span Already have an account?   
                     a(href="login.html") Sign in
@@ -68,3 +68,5 @@ html(lang='en')
                 img(src="../../assets/images/svg/register1.svg" alt="register vector" class="w-[100%]")
                 img(src="../../assets/images/svg/register.svg" alt="register vector" class="common-animate animate-ping top-[6%] 4xl:top-[-3%] 2xl:top-[-6%] 4xl:right-[37%] absolute right-[41%] animate__animated animate__infinite animate__shakeY animate__slower")
       // Page Body End
+
+    include ../../layout/footer-files
