--- a/html/template/chat-app.html
+++ b/html/template/chat-app.html
@@ -1370,7 +1370,7 @@
                                 <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/2.jpg" alt="Dmitriy Groshev"/></div>
                               </div>
                               <div class="w-[calc(100%_-_70px)]"> 
-                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Dmitriy Groshev</h4><span class="text-content truncate block mt-1">
+                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Dmitriy Groshev</h4><span class="text-content truncate block mt-1 flex gap-1">
                                   <svg class="w-4 h-4 stroke-primary"> 
                                     <use href="../../assets/svg/sprite.svg#Calling"> </use>
                                   </svg><span class="text-content text-xs">incoming...</span></span>
@@ -1384,7 +1384,7 @@
                                 <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/3.jpg" alt="Josephin Water"/></div>
                               </div>
                               <div class="w-[calc(100%_-_70px)]"> 
-                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Josephin Water</h4><span class="text-content truncate block mt-1">
+                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Josephin Water</h4><span class="text-content truncate block mt-1 flex gap-1">
                                   <svg class="w-4 h-4 stroke-primary"> 
                                     <use href="../../assets/svg/sprite.svg#Calling"> </use>
                                   </svg><span class="text-content text-xs">outgoing...</span></span>
@@ -1398,7 +1398,7 @@
                                 <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/4.jpg" alt="Sufiya Elija"/></div>
                               </div>
                               <div class="w-[calc(100%_-_70px)]"> 
-                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Sufiya Elija</h4><span class="text-content truncate block mt-1">
+                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Sufiya Elija</h4><span class="text-content truncate block mt-1 flex gap-1">
                                   <svg class="w-4 h-4 stroke-secondary"> 
                                     <use href="../../assets/svg/sprite.svg#Video"> </use>
                                   </svg><span class="text-content text-xs">missed...</span></span>
@@ -1412,7 +1412,7 @@
                                 <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/5.jpg" alt="Mukrani Pabelo"/></div>
                               </div>
                               <div class="w-[calc(100%_-_70px)]"> 
-                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Mukrani Pabelo</h4><span class="text-content truncate block mt-1">
+                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Mukrani Pabelo</h4><span class="text-content truncate block mt-1 flex gap-1">
                                   <svg class="w-4 h-4 stroke-secondary"> 
                                     <use href="../../assets/svg/sprite.svg#Video"> </use>
                                   </svg><span class="text-content text-xs">incoming...</span></span>
@@ -1426,7 +1426,7 @@
                                 <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/6.jpg" alt="Janis Evans"/></div>
                               </div>
                               <div class="w-[calc(100%_-_70px)]"> 
-                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Janis Evans</h4><span class="text-content truncate block mt-1">
+                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Janis Evans</h4><span class="text-content truncate block mt-1 flex gap-1">
                                   <svg class="w-4 h-4 stroke-secondary"> 
                                     <use href="../../assets/svg/sprite.svg#Video"> </use>
                                   </svg><span class="text-content text-xs">missed...</span></span>
@@ -1440,7 +1440,7 @@
                                 <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/7.jpg" alt="John Holland"/></div>
                               </div>
                               <div class="w-[calc(100%_-_70px)]"> 
-                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">John Holland</h4><span class="text-content truncate block mt-1">
+                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">John Holland</h4><span class="text-content truncate block mt-1 flex gap-1">
                                   <svg class="w-4 h-4 stroke-primary"> 
                                     <use href="../../assets/svg/sprite.svg#Calling"> </use>
                                   </svg><span class="text-content text-xs">missed...</span></span>
@@ -1454,7 +1454,7 @@
                                 <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/8.jpg" alt="Anthony Eaton"/></div>
                               </div>
                               <div class="w-[calc(100%_-_70px)]"> 
-                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Anthony Eaton</h4><span class="text-content truncate block mt-1">
+                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Anthony Eaton</h4><span class="text-content truncate block mt-1 flex gap-1">
                                   <svg class="w-4 h-4 stroke-primary"> 
                                     <use href="../../assets/svg/sprite.svg#Calling"> </use>
                                   </svg><span class="text-content text-xs">outgoing...</span></span>
@@ -1468,7 +1468,7 @@
                                 <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/9.jpg" alt="Michael Wilkerson"/></div>
                               </div>
                               <div class="w-[calc(100%_-_70px)]"> 
-                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Michael Wilkerson</h4><span class="text-content truncate block mt-1">
+                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Michael Wilkerson</h4><span class="text-content truncate block mt-1 flex gap-1">
                                   <svg class="w-4 h-4 stroke-primary"> 
                                     <use href="../../assets/svg/sprite.svg#Calling"> </use>
                                   </svg><span class="text-content text-xs">incoming...</span></span>
@@ -1482,7 +1482,7 @@
                                 <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/10.jpg" alt="Sarah Blake"/></div>
                               </div>
                               <div class="w-[calc(100%_-_70px)]"> 
-                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Sarah Blake</h4><span class="text-content truncate block mt-1">
+                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Sarah Blake</h4><span class="text-content truncate block mt-1 flex gap-1">
                                   <svg class="w-4 h-4 stroke-secondary"> 
                                     <use href="../../assets/svg/sprite.svg#Video"> </use>
                                   </svg><span class="text-content text-xs">incoming...</span></span>
@@ -1496,7 +1496,7 @@
                                 <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/11.jpg" alt="Sohel Soheb"/></div>
                               </div>
                               <div class="w-[calc(100%_-_70px)]"> 
-                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Sohel Soheb</h4><span class="text-content truncate block mt-1">
+                                <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Sohel Soheb</h4><span class="text-content truncate block mt-1 flex gap-1">
                                   <svg class="w-4 h-4 stroke-primary"> 
                                     <use href="../../assets/svg/sprite.svg#Calling"> </use>
                                   </svg><span class="text-content text-xs">missed...</span></span>
@@ -2066,7 +2066,7 @@
           <form class="theme-form flex flex-col gap-2"> 
             <h3>Create Your Room </h3>
             <p>Your Room is where You and your friends hang out.Make yours and start talking.</p><img class="xl:w-[50%] xl:ml-[28%] xl:flex xl:items-center xl:justify-center" src="../../assets/images/chatting.gif " alt=""/>
-            <div> <a class="btn btn-primary text-white" href="index.html">Join a Room</a></div>
+            <div class="my-2"> <a class="btn btn-primary !text-white py-2 block" href="index.html">Join a Room</a></div>
             <div>
               <h4>Or Sign in with</h4>
             </div>
