--- a/html/template/forgot-password.html
+++ b/html/template/forgot-password.html
@@ -47,5 +47,12 @@
       </div>
       <!-- Page Body End-->
     </main>
+    <!-- Feather Icon Js -->
+    <script src="../../assets/js/feather.min.js"></script>
+    <script src="../../assets/js/feather-custom.js"></script>
+    <!-- Select Js -->
+    <script src="../../assets/js/custom-select.js"></script>
+    <!-- Custom script   -->
+    <script src="../../assets/js/script.js"> </script>
   </body>
 </html>
