--- a/html/template/landing.html
+++ b/html/template/landing.html
@@ -25,36 +25,36 @@
   </head>
   <body class="unique-skin" dir="ltr">
     <main class="page-wrapper landing-main">
-      <section id="home">
-        <div class="relative bg-landing-size"> <img class="hidden bg-img" src="../../assets/images/landing/svg/header.png" alt="banner">
-          <div class="backdrop-blur-sm header-sticky top-0 left-0 w-full z-[100] bg-white relative">
-            <div class="container relative">
-              <header class="flex items-center justify-between landing-header py-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] !mb-0"> 
-                <div class="flex items-center gap-4"> <a href="landing.html"> <img class="w-[calc(65px_+_(97_-_65)_*_((100vw_-_320px)_/_(1920_-_320)))] h-auto" src="../../assets/images/logo/logo-dark.png" alt="logo"></a>
-                  <button class="hidden 2lg:block menu-toggle"><i class="w-4 h-4 stroke-dark" data-feather="menu"> </i></button>
-                </div>
-                <nav class="navigation nav-menu 2lg:absolute transition-all relative z-20 2lg:left-0 2lg:w-full 2lg:translate-y-20 sm:translate-y-16 2lg:p-5 2lg:pt-0 2lg:top-[-100px] 2lg:invisible 2lg:opacity-0 2lg:bg-white"> 
-                  <ul class="flex items-center 2lg:flex-col 2lg:items-baseline 2lg:gap-1 gap-[calc(5px_+_(36_-_5)_*_((100vw_-_320px)_/_(1920_-_320)))] font-roboto"> 
-                    <li> <a class="font-medium text-content3 home text-base-responsive nav-link" href="#home">Home   </a></li>
-                    <li> <a class="font-medium text-content3 demo text-base-responsive nav-link" href="#framework">
-                         Frameworks </a></li>
-                    <li> <a class="font-medium text-content3 component text-base-responsive nav-link" href="#core-feature">Core Feature  </a></li>
-                    <li> <a class="font-medium text-content3 application text-base-responsive nav-link" href="#application">Applications  </a></li>
-                    <li> <a class="font-medium text-content3 text-base-responsive" href="https://docs.google.com/forms/d/e/1FAIpQLSe6hKUXw_By-pg7yabL0FxoTM02ZPTxoXy8PE3yboRuUCuyeA/viewform" target="_blank">Hire Us</a></li>
-                  </ul>
-                </nav><a class="flex items-center btn btn-primary text-white text-sm sm:btn-sm gap-[5px]" href="https://themeforest.net/user/pixelstrap/portfolio" target="_blank"> 
-                  <svg class="w-5 h-5 stroke-white"> 
-                    <use href="../../assets/svg/sprite.svg#Buy"> </use>
-                  </svg>Purchase Now          </a>
-              </header>
+      <div class="backdrop-blur-sm header-sticky top-0 left-0 w-full z-[100] bg-white relative">
+        <div class="container relative">
+          <header class="flex items-center justify-between landing-header py-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] !mb-0"> 
+            <div class="flex items-center gap-4"> <a href="landing.html"> <img class="w-[calc(65px_+_(97_-_65)_*_((100vw_-_320px)_/_(1920_-_320)))] h-auto" src="../../assets/images/logo/logo-dark.png" alt="logo"></a>
+              <button class="hidden 2lg:block menu-toggle"><i class="w-4 h-4 stroke-dark" data-feather="menu"> </i></button>
             </div>
-          </div>
-          <div class="home-section lg:px-[15px] sm:pb-0 px-[calc(25px_+_(224_-_25)_*_((100vw_-_320px)_/_(1920_-_320)))] py-[calc(2.2rem_+_(5.5_-_2.2)_*_((100vw_-_320px)_/_(1920_-_320)))] relative h-[89%] 4xl:h-[79%] 2xl:h-[69%] lg:h-auto">
+            <nav class="navigation nav-menu 2lg:absolute transition-all relative z-20 2lg:left-0 2lg:w-full 2lg:translate-y-20 sm:translate-y-16 2lg:p-5 2lg:pt-0 2lg:top-[-100px] 2lg:invisible 2lg:opacity-0 2lg:bg-white"> 
+              <ul class="flex items-center 2lg:flex-col 2lg:items-baseline 2lg:gap-1 gap-[calc(5px_+_(36_-_5)_*_((100vw_-_320px)_/_(1920_-_320)))] font-roboto"> 
+                <li> <a class="font-medium text-content3 home text-base-responsive nav-link" href="#home">Home   </a></li>
+                <li> <a class="font-medium text-content3 demo text-base-responsive nav-link" href="#framework">
+                     Frameworks </a></li>
+                <li> <a class="font-medium text-content3 component text-base-responsive nav-link" href="#core-feature">Core Feature  </a></li>
+                <li> <a class="font-medium text-content3 application text-base-responsive nav-link" href="#application">Applications  </a></li>
+                <li> <a class="font-medium text-content3 text-base-responsive" href="https://docs.google.com/forms/d/e/1FAIpQLSe6hKUXw_By-pg7yabL0FxoTM02ZPTxoXy8PE3yboRuUCuyeA/viewform" target="_blank">Hire Us</a></li>
+              </ul>
+            </nav><a class="flex items-center btn btn-primary text-white text-sm sm:btn-sm gap-[5px]" href="https://themeforest.net/user/pixelstrap/portfolio" target="_blank"> 
+              <svg class="w-5 h-5 stroke-white"> 
+                <use href="../../assets/svg/sprite.svg#Buy"> </use>
+              </svg>Purchase Now          </a>
+          </header>
+        </div>
+      </div>
+      <section class="home-wrapper" id="home">
+        <div class="relative bg-landing-size"> <img class="hidden bg-img" src="../../assets/images/landing/svg/header.png" alt="banner">
+          <div class="home-section lg:px-[15px] sm:py-0 px-[calc(25px_+_(224_-_25)_*_((100vw_-_320px)_/_(1920_-_320)))] py-[calc(2.2rem_+_(5.5_-_2.2)_*_((100vw_-_320px)_/_(1920_-_320)))] relative h-full lg:h-auto">
             <div class="grid grid-cols-2 h-full">          
-              <div class="col-span-1 h-full flex items-center lg:mt-[-5px] lg:py-section-space lg:col-span-2 lg:text-center lg:max-w-[70%] 2md:max-w-[100%] lg:mx-auto lg:h-auto"> 
+              <div class="col-span-1 flex items-center h-[90vh] 2xl:h-[58vh] 5xl:h-[84vh] 4xl:h-[77vh] xl:h-[53vh] lg:mt-[-5px] lg:py-section-space lg:col-span-2 lg:text-center lg:max-w-[70%] 2md:max-w-[100%] lg:mx-auto lg:h-auto"> 
                 <div class="w-full"> 
-                  <h1 class="text-white text-5xl 2xl:text-[38px] xl:text-[34px] 2xl:leading-[2.75rem] xl:leading-[2.5rem] leading-[3.5rem] font-semibold sm:text-lg sm:leading-7 lg:text-3xl-responsive font-poppins">One Stop<br class="lg:hidden">For All Admin Template  </h1>
-                  <p class="mt-4 font-semibold truncate-3 w-[80%] lg:mx-auto lg:block text-base-responsive text-content 2xl:mt-2 2xl:leading-6">Govo is Perfect Admin template for any business. It has all features and modules to create your amazing C-panel. This template for selling Default, Ecommerce etc......</p>
+                  <h1 class="text-white text-5xl 2xl:text-[38px] xl:text-[34px] 2xl:leading-[2.75rem] xl:leading-[2.5rem] leading-[3.5rem] font-semibold sm:text-lg sm:leading-7 lg:text-4xl-responsive font-poppins"> <span class="uppercase text-5xl 2xl:text-[38px] xl:text-[34px] 2xl:leading-[2.75rem] xl:leading-[2.5rem] leading-[3.5rem] font-semibold sm:text-lg sm:leading-7 lg:text-4xl-responsive font-poppins">No jQuery </span><br class="lg:hidden">Tailwind Admin Template  </h1>
+                  <p class="mt-4 font-semibold truncate-3 w-[80%] lg:mx-auto lg:block text-base-responsive text-content 2xl:mt-2 2xl:leading-6">The Govo UI components have been crafted with Tailwind to satisfy most of the use cases, allowing you to kickstart any project with confidence.</p>
                   <div class="flex items-center flex-wrap lg:justify-center lg:gap-[5px]  gap-[calc(0px_+_(12_-_0)_*_((100vw_-_320px)_/_(1920_-_320)))] mt-8 2xl:mt-6 lg:mt-5"><a class="flex items-center gap-[5px] 2sm:text-3xs  btn btn-secondary 2xl:py-2 text-white" href="https://themeforest.net/user/pixelstrap/portfolio" target="_blank"> 
                       <svg class="w-5 h-5 stroke-white"> 
                         <use href="../../assets/svg/sprite.svg#Buy"> </use>
@@ -65,16 +65,16 @@
                 </div>
               </div>
               <div class="col-span-1 lg:hidden">      
-                <div class="relative lg:w-[70%] m-auto"> <img class="w-full transform -rotate-6 absolute top-[40px] right-[-310px] h-[660px] xl:right-[-200px] border border-white rounded-[20px] z-[3] 4xl:h-[590px] 2xl:h-[500px] 4xl:right-[-260px]" src="../../assets/images/landing/dashboard/default.jpg" alt="banner"><img class="w-full transform -rotate-6 absolute top-[180px] right-[-80px] h-[470px] xl:right-[-30px] border border-white rounded-[20px] z-[2] 4xl:h-[410px] 2xl:h-[360px]" src="../../assets/images/landing/dashboard/ecommerce.jpg" alt="banner"></div>
+                <div class="relative lg:w-[70%] m-auto"> <img class="w-auto transform -rotate-6 absolute top-[30px] right-[-310px] xl:right-[-200px] border border-white rounded-[20px] z-[3] 4xl:right-[-260px]" src="../../assets/images/landing/dashboard/default.png" alt="banner"><img class="w-auto transform -rotate-6 absolute top-[155px] right-[-120px] xl:right-[-30px] 2xl:top-[110px] border border-white rounded-[20px] z-[2]" src="../../assets/images/landing/dashboard/ecommerce.png" alt="banner"></div>
               </div>
             </div>
-            <div> <span class="text-primary font-bold text-[30px] font-caveat absolute top-[16%] right-[44%] transform -rotate-12 lg:hidden 4xl:right-[46%] xl:right-[48%]">Trending</span><img class="trending-animate text-[30px] font-caveat absolute top-[17%] right-[39%] transform rotate-3 lg:hidden" src="../../assets/images/landing/svg/arrow.svg" alt="arrow"><img class="absolute left-[7%] top-[8%] animate__animated animate__infinite animate__pulse animate__delay-3" src="../../assets/images/landing/svg/Group-4.svg" alt="shape"><img class="absolute left-[11%] bottom-0 animate__animated animate__infinite animate__pulse animate__delay-3 sm:hidden" src="../../assets/images/landing/svg/Group-5.svg" alt="shape"><img class="absolute left-[30%] top-[20%] animate__animated animate__infinite animate__pulse lg:hidden" src="../../assets/images/landing/svg/cross.svg" alt="cross"><img class="absolute left-[39%] bottom-[30%] lg:right-[8%] lg:left-unset lg:bottom-[25%] animate__animated animate__infinite animate__pulse xl:left-[44%]" src="../../assets/images/landing/svg/circle.svg" alt="circle">
-              <div class="wavy-gif right-[15%] top-[3%] lg:top-[5%]">
+            <div> <span class="text-primary font-bold text-[30px] font-caveat absolute top-[13%] 4xl:top-[16%] 2xl:top-[6%]  right-[44%] transform -rotate-12 lg:hidden 4xl:right-[45%] 2xl:right-[43%] xl:right-[48%]">Trending </span><img class="trending-animate text-[30px] font-caveat absolute top-[14%] 4xl:top-[17%] 2xl:top-[7%] right-[39%] 2xl:right-[35%] xl:right-[40%] transform rotate-3 lg:hidden" src="../../assets/images/landing/svg/arrow.svg" alt="arrow"><img class="absolute left-[7%] top-[8%] animate__animated animate__infinite animate__pulse animate__delay-3 sm:hidden" src="../../assets/images/landing/svg/Group-4.svg" alt="shape"><img class="absolute left-[11%] bottom-0 animate__animated animate__infinite animate__pulse animate__delay-3 sm:hidden" src="../../assets/images/landing/svg/Group-5.svg" alt="shape"><img class="absolute left-[30%] top-[20%] animate__animated animate__infinite animate__pulse lg:hidden" src="../../assets/images/landing/svg/cross.svg" alt="cross"><img class="absolute left-[39%] bottom-[30%] lg:right-[8%] lg:left-unset lg:bottom-[25%] animate__animated animate__infinite animate__pulse xl:left-[44%]" src="../../assets/images/landing/svg/circle.svg" alt="circle">
+              <div class="wavy-gif right-[15%] sm:hidden top-[3%] lg:top-[5%]">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 251 38">
                   <path fill="none" stroke-width="10" stroke-miterlimit="10" d="M0,9C17.93,9,17.93,29,35.85,29S53.78,9,71.71,9s17.92,20,35.85,20S125.49,9,143.42,9s17.93,20,35.86,20S197.21,9,215.14,9,233.07,29,251,29"></path>
                 </svg>
               </div>
-              <div class="wavy-gif right-[15%] top-[4.5%] lg:top-[8.5%]">
+              <div class="wavy-gif right-[15%] sm:hidden top-[4.5%] lg:top-[8.5%]">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 251 38">
                   <path fill="none" stroke-width="10" stroke-miterlimit="10" d="M0,9C17.93,9,17.93,29,35.85,29S53.78,9,71.71,9s17.92,20,35.85,20S125.49,9,143.42,9s17.93,20,35.86,20S197.21,9,215.14,9,233.07,29,251,29"></path>
                 </svg>
@@ -83,7 +83,7 @@
           </div>
         </div>
       </section>
-      <section class="bg-white py-section-space" id="">
+      <section class="bg-white py-section-space" id=""> 
         <div class="container">
           <div class="max-w-[46%] 2xl:max-w-[70%] 2md:max-w-[100%] mx-auto text-center mb-9 lg:mb-7 sm:mb-5 2xl:mb-8">
             <h2 class="text-title font-semibold leading-none">Admin <span class="text-primary font-semibold">Unique Layouts</span></h2>
