--- a/html/template/login.html
+++ b/html/template/login.html
@@ -49,7 +49,7 @@
                     </label><span>Remember Me</span>
                   </div>
                   <div class="!mb-0"><a href="forgot-password.html">Forgot Password? </a></div>
-                </div><a class="btn btn-primary !text-white hover:drop-shadow-lg" href="index.html">Sign in</a>
+                </div><a class="btn btn-primary !text-white hover:drop-shadow-lg my-2" href="index.html">Sign in</a>
                 <div>
                   <h4>Or Sign in with </h4>
                 </div>
@@ -74,5 +74,16 @@
       </div>
       <!-- Page Body End-->
     </main>
+    <!-- Feather Icon Js -->
+    <script src="../../assets/js/feather.min.js"></script>
+    <script src="../../assets/js/feather-custom.js"></script>
+    <!-- Select Js -->
+    <script src="../../assets/js/custom-select.js"></script>
+    <!-- fontAwesome js-->
+    <script src="../../assets/js/fontawesome/all.min.js"></script>
+    <!-- password hide js -->
+    <script src="../../assets/js/password-hide-show-login.js"></script>
+    <!-- Custom script   -->
+    <script src="../../assets/js/script.js"> </script>
   </body>
 </html>
