--- a/html/template/otp.html
+++ b/html/template/otp.html
@@ -40,8 +40,7 @@
                   <input class="w-full text-center input-otp " placeholder="0" type="tel" required oninput="digitValidate(this)" onkeyup="tabChange(2)" maxlength="1">
                   <input class="w-full text-center input-otp " placeholder="0" type="tel" required oninput="digitValidate(this)" onkeyup="tabChange(3)" maxlength="1">
                   <input class="w-full text-center input-otp " placeholder="0" type="tel" required oninput="digitValidate(this)" onkeyup="tabChange(4)" maxlength="1">
-                </div>
-                <button class="btn btn-primary text-white hover:drop-shadow-lg md:!mb-0 sm:!mt-2">Submit</button>
+                </div><a class="btn btn-primary !text-white hover:drop-shadow-lg my-2">Submit</a>
                 <div class="flex items-center justify-center gap-2"><a class="resend-otp text-xs text-primary" href="javascript:void(0)">Resend </a><span class="time flex gap-2">
                      In <span id="timer"></span></span></div>
                 <div>
@@ -67,5 +66,16 @@
       </div>
       <!-- Page Body End-->
     </main>
+    <!-- Feather Icon Js -->
+    <script src="../../assets/js/feather.min.js"></script>
+    <script src="../../assets/js/feather-custom.js"></script>
+    <!-- Select Js -->
+    <script src="../../assets/js/custom-select.js"></script>
+    <!-- otp js-->
+    <script src="../../assets/js/otp.js"></script>
+    <!-- fontAwesome js-->
+    <script src="../../assets/js/fontawesome/all.min.js"></script>
+    <!-- Custom script   -->
+    <script src="../../assets/js/script.js"> </script>
   </body>
 </html>
